--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
 								<a href="#" class="icon solid fa-angle-down">More</a>
 								<ul>
 									<li><a href="group.html">Group</a></li>
+									<li><a href="beavers.html">Beavers</a></li>									
+									<li><a href="cubs.html">Cubs</a></li>
+									<li><a href="scouts.html">Scouts</a></li>
+									<li><a href="explorers.html">Explorers</a></li>
 									<li><a href="parents.html">For Parents</a></li>
-									
-										<a href="#">Sections</a>
-										<ul>
-											<li><a href="beavers.html">Beavers</a></li>
-											<li><a href="cubs.html">Cubs</a></li>
-											<li><a href="scouts.html">Scouts</a></li>
-											<li><a href="explorers.html">Explorers</a></li>
+									<li><a href="parents.html">For Parents</a></li>
+
 										</ul>
 									</li>
 								</ul>
