--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,12 @@
 									<li><a href="explorers.html">Explorers</a></li>
 									<li><a href="parents.html">For Parents</a></li>
 									<li><a href="parents.html">For Parents</a></li>
+
 										</ul>
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
+							<li><a href="contact.html" class="button">Contact Us</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -43,7 +44,7 @@
 				<section id="main" class="container medium">
 					<header>
 						<h2>Contact Us</h2>
-						<p>Tell us what you think about our little operation.</p>
+						<p>To join, or general enquiries. Please use the form below</p>
 					</header>
 					<div class="box">
 						<form method="post" action="#">
