--- a/Scouts.html
+++ b/Scouts.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Scouts</title>
+		<title>Scouts - 52nd Reading Scout Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,28 +16,26 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
+								<a href="#" class="icon solid fa-angle-down">More</a>
 								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
+									<li><a href="group.html">Group</a></li>
+									<li><a href="beavers.html">Beavers</a></li>									
+									<li><a href="cubs.html">Cubs</a></li>
+									<li><a href="scouts.html">Scouts</a></li>
+									<li><a href="explorers.html">Explorers</a></li>
+									<li><a href="parents.html">For Parents</a></li>
+									<li><a href="leaders.html">For Leaders</a></li>
+
 										</ul>
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
+							<li><a href="contact.html" class="button">Contact Us</a></li>
 						</ul>
 					</nav>
 				</header>
