--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -29,7 +29,7 @@
 									<li><a href="scouts.html">Scouts</a></li>
 									<li><a href="explorers.html">Explorers</a></li>
 									<li><a href="parents.html">For Parents</a></li>
-									<li><a href="parents.html">For Parents</a></li>
+									<li><a href="leaders.html">For Leaders</a></li>
 
 										</ul>
 									</li>
