--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">52nd Reading Scout Group</a> </h1>
+					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down">More</a>
 								<ul>
-											<li><a href="group.html">Group</a></li>
-											<li><a href="beavers.html">Beavers</a></li>									
-											<li><a href="cubs.html">Cubs</a></li>
-											<li><a href="scouts.html">Scouts</a></li>
-											<li><a href="explorers.html">Explorers</a></li>
-											<li><a href="parents.html">For Parents</a></li>
-											<li><a href="parents.html">For Parents</a></li>
+									<li><a href="group.html">Group</a></li>
+									<li><a href="beavers.html">Beavers</a></li>									
+									<li><a href="cubs.html">Cubs</a></li>
+									<li><a href="scouts.html">Scouts</a></li>
+									<li><a href="explorers.html">Explorers</a></li>
+									<li><a href="parents.html">For Parents</a></li>
+									<li><a href="leaders.html">For Leaders</a></li>
+									<li>
 
 										</ul>
 									</li>
