--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<br />
 							<p>We are a dynamic and thriving scout group based at the Reading Scout & Guide HQ. We welcome young people of all ages</p>
 						</header>
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image featured"><img src="images/banner.gif" alt="" /></span>
 					</section>
 
 					<section class="box special features">
