--- a/index.html
+++ b/index.html
@@ -31,12 +31,9 @@
 									<li><a href="parents.html">For Parents</a></li>
 									<li><a href="leaders.html">For Leaders</a></li>
 									<li>
-
-										</ul>
-									</li>
+									<li><a href="contact.html" class="button">Contact Us</a></li>
 								</ul>
 							</li>
-							<li><a href="contact.html" class="button">Contact Us</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -90,24 +87,7 @@
 					</section>
 
 					
-			<!-- CTA -->
-				<section id="cta">
-
-					<h2>Sign up for beta access</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-					<form>
-						<div class="row gtr-50 gtr-uniform">
-							<div class="col-8 col-12-mobilep">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
-							</div>
-							<div class="col-4 col-12-mobilep">
-								<input type="submit" value="Sign Up" class="fit" />
-							</div>
-						</div>
-					</form>
-
-				</section>
+			
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -119,7 +99,7 @@
 						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="#">52nd Reading Scout Group (Jay Hope)</a></li>
+						<li>&copy; 52nd Reading Scout Group All rights reserved.</li><li>Design: <a href="#">Jay Hope</a></li>
 					</ul>
 				</footer>
 
