--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 									<li><a href="parents.html">For Parents</a></li>
 									<li><a href="leaders.html">For Leaders</a></li>
 									<li>
-									<li><a href="contact.html" class="button">Contact Us</a></li>
+								<li><a href="contact.html" class="button">Contact Us</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -40,7 +40,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>52nd Reading Scout Group</h2>
+					<span class="image featured"><img src="images/banner.gif" alt="" /></span>
 					<p>Welcome to our Site BETA</p>
 					<ul class="actions special">
 						<li><a href="contact.html" class="button primary">Join Us</a></li>
