--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
+					<h1><a href="index.html"><img src="images/52ndscouts.png"></a></h1>	
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -40,8 +40,8 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<span class="image featured"><img src="images/banner.gif" alt="" /></span>
-					<p>Welcome to our Site BETA</p>
+					<h2>52nd Reading Scout Group</h2>
+					<p>Welcome to our BETA site.</p>
 					<ul class="actions special">
 						<li><a href="contact.html" class="button primary">Join Us</a></li>
 					</ul>
