--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
+			
 				<header id="header" class="alt">
-					<h1><a href="index.html"><img src="images/52ndscouts.png"></a></h1>	
+					
+					<a href="index.html" class="logo">
+									<span class="symbol"><img src="images/52ndscouts.png" alt="" />
+								</a>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
