--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<header id="header" class="alt">
 					
 					<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/52ndscouts.png" alt="" />
+									<span class="symbol"><img src="images/52ndscouts-2.png" alt="" />
 								</a>
 					<nav id="nav">
 						<ul>
