--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,21 @@
 -->
 <html>
 	<head>
-		<title>Contact - 52nd Reading Scout Group</title>
+		<title>Contact - 52nd Reading Scouts</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="is-preload">
+	<body class="landing is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
+			
+				<header id="header" class="alt">
+					
+					<a href="index.html" class="logo">
+									<span class="symbol"><img src="images/52ndscouts-4.png" alt="" />
+								</a>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -30,12 +34,12 @@
 									<li><a href="explorers.html">Explorers</a></li>
 									<li><a href="parents.html">For Parents</a></li>
 									<li><a href="leaders.html">For Leaders</a></li>
-
-										</ul>
-									</li>
+									<li>
+										
 								</ul>
 							</li>
 							<li><a href="contact.html" class="button">Contact Us</a></li>
+
 						</ul>
 					</nav>
 				</header>
