--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>52nd Reading Scout Group</title>
+		<title>Home - 52nd Reading Scouts</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,9 +35,11 @@
 									<li><a href="parents.html">For Parents</a></li>
 									<li><a href="leaders.html">For Leaders</a></li>
 									<li>
-								<li><a href="contact.html" class="button">Contact Us</a></li>
+										
 								</ul>
 							</li>
+							<li><a href="contact.html" class="button">Contact Us</a></li>
+
 						</ul>
 					</nav>
 				</header>
