--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 			
 				<header id="header" class="alt">
 					
-					<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/52ndscouts-5.png" alt="" />
-								</a>
+					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -46,7 +44,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>52nd Reading Scout Group</h2>
+					<span class="symbol"><img src="images/52ndscouts.png" alt="" />
 					<p>Welcome to our BETA site.</p>
 					<ul class="actions special">
 						<li><a href="contact.html" class="button primary">Join Us</a></li>
