--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<span class="symbol"><img src="images/52ndscouts.png" alt="" />
+					<span class="symbol"><img src="images/52ndscouts-3.png" alt="" />
 					<p>Welcome to our BETA site.</p>
 					<ul class="actions special">
 						<li><a href="contact.html" class="button primary">Join Us</a></li>
