--- a/cubs.html
+++ b/cubs.html
@@ -6,16 +6,18 @@
 -->
 <html>
 	<head>
-		<title>Cubs - 52nd Reading Scout Group</title>
+		<title>Cubs - 52nd Reading Scouts</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="is-preload">
+	<body class="landing is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
+			
+				<header id="header" class="alt">
+					
 					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
 					<nav id="nav">
 						<ul>
@@ -30,20 +32,19 @@
 									<li><a href="explorers.html">Explorers</a></li>
 									<li><a href="parents.html">For Parents</a></li>
 									<li><a href="leaders.html">For Leaders</a></li>
-
-										</ul>
-									</li>
+									<li>
+										
 								</ul>
 							</li>
 							<li><a href="contact.html" class="button">Contact Us</a></li>
+
 						</ul>
 					</nav>
 				</header>
-
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Elements</h2>
+						<h2>Cubs</h2>
 						<p>Just an assorted selection of elements.</p>
 					</header>
 					<div class="row">
