--- a/cubs.html
+++ b/cubs.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="landing is-preload">
+	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -41,6 +41,7 @@
 						</ul>
 					</nav>
 				</header>
+			
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
