--- a/cubs.html
+++ b/cubs.html
@@ -41,20 +41,28 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Cubs</h2>
+						<img src="cubs-logo.jpg" alt="Cub Scout Logo">
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-						<h3>This is a subheading</h3>
-						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+						<h3>Who are cubs</h3>
+						<p>Cubs are young people who:</p>
+						<ul>
+ 						   	<li>Master new skills and try new things</li>
+  						   	<li>Have fun and go on adventures</li>
+  						   	<li>Make friends</li>
+							<li>Are curious about the world around them</li>
+							<li>Help others and make a difference, in their own communities and beyond</li>
+						</ul>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
-								<h3>And now a subheading</h3>
-								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
-							</div>
+								<h3>What we do</h3>
+								<p>There are loads of fun things that you can do as a Cub Scout. You will get a chance to try lots of different activities like exploring, hiking, map reading, stargazing, singing campfire songs, tying knots, cooking, computing and collecting ... and you can get a badge for these and many other hobbies and activities to wear on your uniform.
+Cub Scouts also get to go on trips and days out, to places like the swimming pool, Science Museum or an animal sanctuary. Every year you will have the opportunity to go camping with the rest of your Pack ... this will mean you sleeping in a tent and doing lots of exciting outdoor activities.
+
+Cubs are usually invested into the Pack after four to six weeks. When they are invested, they make their Promise and say the Law and can then proudly wear the 52nd Reading Group's scarlet necker. They are also awarded the World Membership Badge, The Royal County of Berkshire, Reading Central District and 52nd Reading Scout Group badges.</p>
 							<div class="row-6 row-12-mobilep">
-								<h3>And another subheading</h3>
+								<h3>The Promise</h3>
 								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
 							</div>
 						</div>
