--- a/cubs.html
+++ b/cubs.html
@@ -41,7 +41,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<img src="cubs-logo.jpg" alt="Cub Scout Logo">
+						<img src="cubs-logo.png" alt="Cub Scout Logo">
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
