--- a/cubs.html
+++ b/cubs.html
@@ -41,7 +41,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<img src="cubslogo.jpg" alt="Cub Scout Logo">
+						<img src="images\cubslogo.jpg" alt="Cub Scout Logo">
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
@@ -77,10 +77,9 @@ Cubs are usually invested into the Pack after four to six weeks. When they are i
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 52nd Reading Scout Group All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
 					</ul>
 				</footer>
 
