--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
 				</header>
 
 			<!-- Banner -->
-
+				<section id="banner">
+					<span class="symbol"><img src="images/banner.gif" alt="" /></span>
+					<p>Welcome to our BETA site.</p>
+					<ul class="actions special">
+						<li><a href="contact.html" class="button primary">Join Us</a></li>
+					</ul>
+				</section>
 
 			<!-- Main -->
 				<section id="main" class="container">
