--- a/index.html
+++ b/index.html
@@ -53,16 +53,12 @@
 
 			<!-- Main -->
 				<section id="main" class="container">
-					<h1> </h1>
-					<h1></h1>
-						<span class="image featured"><img src="images/banner.gif" alt="" /></span>
-							<h1></h1>
 
 					<section class="box special">
 						<header class="major">
 							<h2>About Us
 							<br />
-							<p>We are a dynamic and thriving scout group based at the Reading Scout & Guide HQ. We welcome young people of all ages</p>
+							<p>We are a dynamic and thriving scout group based at the Reading Scout & Guide HQ. n\We welcome young people of all ages</p>
 						</header>
 					</section>
 
