--- a/cubs.html
+++ b/cubs.html
@@ -41,7 +41,8 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<img src="images\cubslogo.jpg" alt="Cub Scout Logo">
+						<div class="box">
+						<span class="image featured"><img src="images/cubslogo.jpg" alt="Cub Scout Logo" /></span>
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
