--- a/cubs.html
+++ b/cubs.html
@@ -45,7 +45,7 @@
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
-						<h3>Who are cubs</h3>
+						<h3>Who are Cubs?</h3>
 						<p>Cubs are young people who:</p>
 						<ul>
  						   	<li>Master new skills and try new things</li>
