--- a/cubs.html
+++ b/cubs.html
@@ -57,13 +57,31 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What we do</h3>
-								<p>There are loads of fun things that you can do as a Cub Scout. You will get a chance to try lots of different activities like exploring, hiking, map reading, stargazing, singing campfire songs, tying knots, cooking, computing and collecting ... and you can get a badge for these and many other hobbies and activities to wear on your uniform.
-Cub Scouts also get to go on trips and days out, to places like the swimming pool, Science Museum or an animal sanctuary. Every year you will have the opportunity to go camping with the rest of your Pack ... this will mean you sleeping in a tent and doing lots of exciting outdoor activities.
-
-Cubs are usually invested into the Pack after four to six weeks. When they are invested, they make their Promise and say the Law and can then proudly wear the 52nd Reading Group's scarlet necker. They are also awarded the World Membership Badge, The Royal County of Berkshire, Reading Central District and 52nd Reading Scout Group badges.</p>
-							<div class="row-6 row-12-mobilep">
+								<p>There are loads of fun things that you can do as a Cub Scout. </p>
+								<p>You will get a chance to try lots of different activities like exploring, hiking, map reading, stargazing, singing campfire songs, tying knots, cooking, computing and collecting ... and you can get a badge for these and many other hobbies and activities to wear on your uniform.</p>
+								<p></p>Cub Scouts also get to go on trips and days out, to places like the swimming pool, Science Museum or an animal sanctuary. Every year you will have the opportunity to go camping with the rest of your Pack ... this will mean you sleeping in a tent and doing lots of exciting outdoor activities.</p>
+								<p>Cubs are usually invested into the Pack after four to six weeks. When they are invested, they make their Promise and say the Law and can then proudly wear the 52nd Reading Group's scarlet necker. They are also awarded the World Membership Badge, The Royal County of Berkshire, Reading Central District and 52nd Reading Scout Group badges.</p>
+								<div class="row-6 row-12-mobilep">
 								<h3>The Promise</h3>
-								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+								<p>Insert Cub Scout Promise HERE - List type thingy</p>
+								<div class="row-6 row-12-mobilep">
+								<h3>Awards and Badges</h3>
+									<p>Cub Scouts have the opportunity to gain awards and badges by completing a wide range of activities and challenges and in recognition of their commitment, effort and achievements.
+
+Activity badges
+Many of the badges available are activity badges, which allow Cub Scouts to show their progress in existing pursuits, but also to try all kinds of new things and form new interests. There is a wide range of staged activity badges which span the sections (with only the highest of each badge worn on the uniform at any time).
+
+Challenge awards
+Gaining a challenge badge involves accomplishing a number of more ambitious tasks within the Pack or community. There are several challenge badges across a number of themes, from the physical and outdoorsy to challenges dealing with the local community or issues connected with the Scouting world.
+
+Joining-In Awards 
+These badges are awarded to celebrate the anniversary of a young person's initial commitment to Scouting and for taking an active part in the programme.
+
+Cub Scout badges that you should move to a new Scout Uniform
+
+Oggi
+Alongside our many activities and badge work, 52nd Reading Cub Pack has a fun competition running where points are awarded to the sixes for various thing such as being on time for the start of each meeting (Grand Howl) wearing smart, full uniform, doing their best in other ways, thinking of others and doing good turns.
+At the end of the term, the six with the most Oggi points gets awarded Oggi (which wears their six's colours for a term) and a prize.</p>
 							</div>
 						</div>
 					</div>
