--- a/index.html
+++ b/index.html
@@ -53,14 +53,23 @@
 
 			<!-- Main -->
 				<section id="main" class="container">
+					<header class="major">
+							<h2>Who we are</h2>
+					</header>
+						<p>52nd Reading Scout group was registered on 27th October 1925</p>
+ 						<p>We are based at the Reading Scout and Guide HQ, Northcourt Avenue</p>
+  						
+						<div class="row">
+							<div class="row-6 row-12-mobilep">
+								<h3>What we do</h3>
+								<p>There are loads of fun things that you can do as a Cub Scout. </p>
+								<div class="row-6 row-12-mobilep">
 
-					<section class="box special">
-						<header class="major">
-							<h2>About Us
-							<br />
-							<p>We are a dynamic and thriving scout group based at the Reading Scout & Guide HQ. n\We welcome young people of all ages</p>
-						</header>
-					</section>
+							</div>
+						</div>
+					</div>
+				</section>
+
 
 					<section class="box special features">
 						<div class="features-row">
@@ -90,7 +99,8 @@
 					</section>
 
 					
-			
+
+
 
 			<!-- Footer -->
 				<footer id="footer">
