--- a/index.html
+++ b/index.html
@@ -55,50 +55,32 @@
 				<section id="main" class="container">
 					<header class="major">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/Jlrimx5fjTQ?si=XHTQhn43eRHbqPF-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-						<p> </p>
-						<p> </p>
-						<p> </p>
-
-							<h2>Who we are</h2>
 					</header>
-						<p>52nd Reading Scout group was registered on 27th October 1925</p>
- 						<p>We are based at the Reading Scout and Guide HQ, Northcourt Avenue</p>
-  						
-						<div class="row">
-							<div class="row-6 row-12-mobilep">
-								<h3>What we do</h3>
-								<p>There are loads of fun things that you can do as a Cub Scout. </p>
-								<div class="row-6 row-12-mobilep">
-
-							</div>
-						</div>
-					</div>
-				</section>
 
 					<section class="box special features">
 						<div class="features-row">
 							<section>
 								<span class="icon solid major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Who We Are/h3>
+								<p>Registered 27th October 1925, We are a Scout group that consists of Beavers, Cubs, Scouts and a District Explorer unit.</p>
+								<p>We are based at the Reading Scout and Guide HQ. Northcourt Road, Reading, RG2 7HG</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-chart-area accent3"></span>
-								<h3>Ipsum dolor</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>What We Do</h3>
+								<p>Scouts is where young people make new friends, have amazing adventures, and learn new skills.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
 								<span class="icon solid major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>How to Join</h3>
+								<p>To request more information, or if you'd like to join our group. Visit our Contact Page. (LINK THIS IN)</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Become a volunteer</h3>
+								<p>We are always looking for Adult Volunteers.</p>
 							</section>
 						</div>
 					</section>
@@ -113,11 +95,9 @@
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; 52nd Reading Scout Group All rights reserved.</li><li>Design: <a href="#">Jay Hope</a></li>
+						<li>&copy; 52nd Reading Scout Group All rights reserved.</li><li>Design: <a href="#">Jay (Thuu)</a></li>
 					</ul>
 				</footer>
 
