--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="features-row">
 							<section>
 								<span class="icon solid major fa-bolt accent2"></span>
-								<h3>Who We Are/h3>
+								<h3>Who We Are</h3>
 								<p>Registered 27th October 1925, We are a Scout group that consists of Beavers, Cubs, Scouts and a District Explorer unit.</p>
 								<p>We are based at the Reading Scout and Guide HQ. Northcourt Road, Reading, RG2 7HG</p>
 							</section>
