--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<p>Welcome to our BETA site.</p>
 					<ul class="actions special">
 						<li><a href="contact.html" class="button primary">Join Us</a></li>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/Jlrimx5fjTQ?si=XHTQhn43eRHbqPF-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<li><iframe width="560" height="315" src="https://www.youtube.com/embed/Jlrimx5fjTQ?si=XHTQhn43eRHbqPF-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></li>
 
 					</ul>
 				</section>
