--- a/Terms.html
+++ b/Terms.html
@@ -3,7 +3,7 @@
 
 <html>
 	<head>
-		<title>Terms and Conditions - 52nd Reading Scout Group</title>
+		<title>Privacy Policy - 52nd Reading Scout Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -96,7 +96,7 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>
-     <p>Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
+     					<p>Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
 					<ul class="copyright">
 						<li>&copy; 52nd Reading Scout Group All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
 					</ul>
