--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
+					<p>Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
 					<ul class="copyright">
 						<li>&copy; 52nd Reading Scout Group All rights reserved.</li><li>Design: <a href="#">Jay (Thuu)</a></li>
 					</ul>
