--- a/terms.html
+++ b/terms.html
@@ -41,7 +41,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<span class="image featured"><img src="images/cubslogo.jpg" alt="Cub Scout Logo" /></span>
+						<h2>Terms and Conditions</h2>
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
