--- a/terms.html
+++ b/terms.html
@@ -21,7 +21,6 @@
 							<li>
 								<a href="#" class="icon solid fa-angle-down">More</a>
 								<ul>
-									<li><a href="group.html">Group</a></li>
 									<li><a href="beavers.html">Beavers</a></li>									
 									<li><a href="cubs.html">Cubs</a></li>
 									<li><a href="scouts.html">Scouts</a></li>
@@ -42,11 +41,12 @@
 				<section id="main" class="container">
 					<header>
 						<h2>Terms and Conditions</h2>
-						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
+						<p>Last Updated: NOW</p>
 					</header>
 					<div class="box">
-						<h3>Who are Cubs?</h3>
-						<p>Cubs are young people who:</p>
+						<h3></h3>
+						<p>This website is controlled and managed by 52nd Reading Scout Group</p>
+						<p>We have made every reasonable effort to ensure that the information provided on this site is accurate and up-to-date and the content conforms to the Child Protection Policy, the Web Guidelines and other relevant policies of <a href="http://www.scouts.org.uk/">The Scout Association</a>. This site provides links to third party web sites over which we have no control. If you are concerned about any such links please <a href="contact.html">Contact Usn</a>.</p>
 						<ul>
  						   	<li>Master new skills and try new things</li>
   						   	<li>Have fun and go on adventures</li>
