--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,20 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
+
 <html>
 	<head>
-		<title>Contact - 52nd Reading Scouts</title>
+		<title>Cubs - 52nd Reading Scout Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="landing is-preload">
+	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 			
-				<header id="header" class="alt">
-					
-					<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/52ndscouts-4.png" alt="" />
-								</a>
+				<header id="header">
+					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
