--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<span class="image"><img src="images/banner.gif" alt="" /></span>
+					<span class="image fit img"><img src="images/banner.gif" alt="" /></span>
 					<p>Welcome to our BETA site.</p>
 					<ul class="actions special">
 						<li><a href="contact.html" class="button primary">Join Us</a></li>
