--- a/cubs.html
+++ b/cubs.html
@@ -40,7 +40,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<span class="image featured"><img src="images/cubslogo.jpg" alt="Cub Scout Logo" /></span>
+						<span class="image fit"><img src="images/cubslogo.jpg" alt="Cub Scout Logo" /></span>
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
