--- a/cubs.html
+++ b/cubs.html
@@ -14,7 +14,7 @@
 			<!-- Header -->
 			
 				<header id="header">
-					<h1><a href="index.html">52nd Reading Scout Group</a></h1>
+					<h1><span class="image left"><img href="index.html" src="images/cubslogo.jpg" alt="52nd Reading" /></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
