--- a/cubs.html
+++ b/cubs.html
@@ -13,8 +13,12 @@
 
 			<!-- Header -->
 			
+	<!-- Header -->
+			
+<!-- Header -->
+			
 				<header id="header">
-					<span class="logo"><img href="index.html" src="images/52ndlogo.png" alt="52nd Reading" />
+        <span class="logo"><img href="index.html" src="images\52ndlogo" alt="52nd Reading" /></span>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -27,7 +31,6 @@
 									<li><a href="explorers.html">Explorers</a></li>
 									<li><a href="parents.html">For Parents</a></li>
 									<li><a href="leaders.html">For Leaders</a></li>
-									<li>
 										
 								</ul>
 							</li>
@@ -36,6 +39,7 @@
 						</ul>
 					</nav>
 				</header>
+
 
 			<!-- Main -->
 				<section id="main" class="container">
