On branch main  Changes to be committed: 	new file:   .vscode/launch.json 	deleted:    404.html 	modified:   assets/css/main.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<span class="image fit"><img src="images/banner.gif" alt="" /></span>
-					<p>Welcome to our BETA site.</p>
+					<div class="box alt">
+						<h3>52nd Reading Scout Group</h3>
+						<p>Welcome to our BETA site.</p>
 					<ul class="actions special">
 						<li><a href="contact.html" class="button primary">Join Us</a></li>
 					</ul>
