--- a/cubs.html
+++ b/cubs.html
@@ -18,7 +18,7 @@
 <!-- Header -->
 			
 				<header id="header">
-        <span class="logo"><img href="index.html" src="images\52ndlogo" alt="52nd Reading" /></span>
+        <span class="logo"><img href="index.html" src="images\52ndlogo.png" alt="52nd Reading" /></span>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
