Changes to be committed: 	modified:   assets/css/main.css 	modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -18,7 +18,7 @@
 <!-- Header -->
 			
 				<header id="header">
-        <span class="image fit"><img href="index.html" src="images\52ndlogo.png" alt="52nd Reading" /></span>
+        <span class="image left fit"><img href="index.html" src="images\52ndlogo.png" alt="52nd Reading" /></span>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -92,6 +92,7 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 
 			<!-- Footer -->
 				<footer id="footer">
+					<span class="image align-centre"><img src="images/cubslogo.jpg" alt="Cub Scout Logo" /></span>
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -99,7 +100,7 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 					</ul>
      					<p>Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
 					<ul class="copyright">
-						<li>&copy; 52nd Reading Scout Group All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
+						<li>&copy; 52nd Reading Scout Group 2023 All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
 					</ul>
 				</footer>
 
