Changes to be committed: 	modified:   assets/css/main.css 	modified:   cubs.html 	modified:   favicon.png 	deleted:    images/52ndscouts-2.png 	deleted:    images/scouts-logo.jpg

--- a/cubs.html
+++ b/cubs.html
@@ -18,7 +18,7 @@
 <!-- Header -->
 			
 				<header id="header">
-        <span class="image left fit"><img href="index.html" src="images\52ndlogo.png" alt="52nd Reading" /></span>
+        <span class="image left fit"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" /></span>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
