Changes to be committed: 	modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -92,7 +92,7 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 
 			<!-- Footer -->
 				<footer id="footer">
-					<span class="image centre"><img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" /></span>
+					<span class="image centre"><img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:100px"/></span>
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
