Changes to be committed: 	modified:   assets/css/main.css 	modified:   cubs.html 	new file:   images/group-of-cubs-on-raft-jpg.jpg 	deleted:    images/png-transparent-line-leader-scouting-scout-association-scout-group-world-scout-emblem-scout-district-explorer-scouts-young-leaders-logo-scout-leader-thumbnail.png

--- a/cubs.html
+++ b/cubs.html
@@ -18,7 +18,7 @@
 <!-- Header -->
 			
 				<header id="header">
-        <span class="image left fit"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:100px"/></span>
+        <span class="image left fit"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -44,7 +44,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<span class="image fit"><img src="images/cubslogo.jpg" alt="Cub Scout Logo" /></span>
+						<span class="image fit"><img src="igroup-of-cubs-on-raft-jpg.jpg" alt="Cub Scout Logo" /></span>
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
@@ -94,9 +94,12 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 				<footer id="footer">
 					<span class="image centre"><img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:100px"/></span>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="beavers.html">Beavers</a></li>									
+						<li><a href="cubs.html">Cubs</a></li>
+						<li><a href="scouts.html">Scouts</a></li>
+						<li><a href="explorers.html">Explorers</a></li>
+						<li><a href="parents.html">For Parents</a></li>
+						<li><a href="leaders.html">For Leaders</a></li>
 					</ul>
      					<p>Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
 					<ul class="copyright">
