Changes to be committed: 	modified:   assets/css/main.css 	modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -44,7 +44,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<span class="image fit"><img src="group-of-cubs-on-raft-jpg.jpg" alt="Cub Scout Logo" style="width:auto;height:400px" /></span>
+						<span class="image fit"><img src="group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:400px" /></span>
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
@@ -92,7 +92,7 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 
 			<!-- Footer -->
 				<footer id="footer">
-					<span class="image centre"><img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:100px"/></span>
+					<img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:150px" class="center"/>
 					<ul class="nav">
 						<li><a href="beavers.html">Beavers</a></li>									
 						<li><a href="cubs.html">Cubs</a></li>
