Changes to be committed: 	modified:   assets/css/main.css 	modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -44,7 +44,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<span class="image fit"><img src="group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:400px" /></span>
+						<span class="image fit"><img src="images/" alt="Cubs on raft" style="width:auto;height:400px" /></span>
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
@@ -93,14 +93,6 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 			<!-- Footer -->
 				<footer id="footer">
 					<img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:150px" class="center"/>
-					<ul class="nav">
-						<li><a href="beavers.html">Beavers</a></li>									
-						<li><a href="cubs.html">Cubs</a></li>
-						<li><a href="scouts.html">Scouts</a></li>
-						<li><a href="explorers.html">Explorers</a></li>
-						<li><a href="parents.html">For Parents</a></li>
-						<li><a href="leaders.html">For Leaders</a></li>
-					</ul>
      					<p>Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
 					<ul class="copyright">
 						<li>&copy; 52nd Reading Scout Group 2023 All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
