Changes to be committed: 	modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -44,7 +44,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<span class="image fit"><img src="images/" alt="Cubs on raft" style="width:auto;height:400px" /></span>
+						<span class="image fit"><img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:400px" /></span>
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
