Changes to be committed: 	modified:   assets/css/main.css 	modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -23,17 +23,16 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#" class="icon solid fa-angle-down">More</a>
+								<a href="#">Sections</a>
 								<ul>
 									<li><a href="beavers.html">Beavers</a></li>									
 									<li><a href="cubs.html">Cubs</a></li>
 									<li><a href="scouts.html">Scouts</a></li>
 									<li><a href="explorers.html">Explorers</a></li>
-									<li><a href="parents.html">For Parents</a></li>
-									<li><a href="leaders.html">For Leaders</a></li>
-										
 								</ul>
 							</li>
+							<li><a href="parents.html">For Parents</a></li>
+							<li><a href="leaders.html">For Leaders</a></li>
 							<li><a href="contact.html" class="button">Contact Us</a></li>
 
 						</ul>
@@ -44,7 +43,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<span class="image fit"><img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" /></span>
+						<span class="image centre"><img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" /></span>
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
@@ -93,7 +92,7 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 			<!-- Footer -->
 				<footer id="footer">
 					<img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:150px" class="center"/>
-     					<p>Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
+     					<p style="color:#FFFFFF";> Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
 					<ul class="copyright">
 						<li>&copy; 52nd Reading Scout Group 2023 All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
 					</ul>
