--- a/cubs.html
+++ b/cubs.html
@@ -43,7 +43,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<span class="image centre"><img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" /></span>
+						<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" /></span>
 						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
 					</header>
 					<div class="box">
@@ -94,7 +94,7 @@ At the end of the term, the six with the most Oggi points gets awarded Oggi (whi
 					<img src="images/logo-generator-stacked-blackwhite-png-2.png" alt="Group Logo" style="width:auto;height:150px" class="center"/>
      					<p style="color:#FFFFFF";> Website <a href="terms.html">Terms and Conditions</a> and <a href="privacy.html">Privacy Policy</a></p>
 					<ul class="copyright">
-						<li>&copy; 52nd Reading Scout Group 2023 All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
+						<li>&copy; 52nd Reading Scout Group 2023. All rights reserved.</li><li>Design: <a href="thuu@52ndreadingscoutgroup.org.uk">Jay H (Thuu)</a></li>
 					</ul>
 				</footer>
 
