Changes to be committed: 	modified:   assets/css/main.css 	modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -18,7 +18,7 @@
 <!-- Header -->
 			
 				<header id="header">
-        <span class="image left fit"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
+        <span class="image left"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -39,13 +39,12 @@
 					</nav>
 				</header>
 
-
+				<header>
+					<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" /></span>
+					<p>Cub Scouts is for children aged 8 to 10½ years old</p>
+				</header>
 			<!-- Main -->
 				<section id="main" class="container">
-					<header>
-						<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" /></span>
-						<p>Cub Scouts is for children aged 8 to 10½ years old</p>
-					</header>
 					<div class="box">
 						<h3>Who are Cubs?</h3>
 						<p>Cubs are young people who:</p>
