Changes to be committed: 	modified:   assets/css/main.css 	modified:   cubs.html 	deleted:    images/group-of-cubs-on-raft-jpg.jpg

--- a/cubs.html
+++ b/cubs.html
@@ -18,7 +18,7 @@
 <!-- Header -->
 			
 				<header id="header">
-        <span class="image left"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
+        <span class="image"><img href="index.html" src="images\52ndscouts.png" alt="52nd Reading" style="width:auto;height:80px"/></span>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -40,7 +40,7 @@
 				</header>
 
 				<header>
-					<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:900px" /></span>
+					<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" /></span>
 				</header>
 			<!-- Main -->
 				<section id="main" class="container">
