--- a/cubs.html
+++ b/cubs.html
@@ -40,21 +40,13 @@
 				</header>
 
 				<header>
-					<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" /></span>
-					<!DOCTYPE html>
-<html>
-<head>
+
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
   box-sizing: border-box;
 }
-
-body {
-  font-family: Arial;
-  font-size: 17px;
-}
-
 .container {
   position: relative;
   max-width: 800px;
@@ -76,14 +68,11 @@ body {
 </head>
 <body>
 
-<h2>Responsive Image with Transparent Text</h2>
-
-<div class="container">
-  <img src="images/group-of-cubs-on-raft.jpg" alt="Notebook" style="width:100%;">
+<div>class="container">
+	<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" />
   <div class="content">
-    <h1>Heading</h1>
-    <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
-  </div>
+    <h1>Cubs</h1>
+	<p style="color:#FFFFFF";> Develop new skills. Soar to great heights. Being a Cub opens up a whole other world./p>
 </div>
 
 </body>
