modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -68,7 +68,7 @@
 </head>
 <body>
 
-<div>class="container">
+<div class="container">
 	<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" />
   <div class="content">
     <h1>Cubs</h1>
