--- a/cubs.html
+++ b/cubs.html
@@ -71,8 +71,8 @@
 <div class="container">
 	<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" />
   <div class="content">
-    <h1>Cubs</h1>
-	<p style="color:#FFFFFF";> Develop new skills. Soar to great heights. Being a Cub opens up a whole other world./p>
+    <h1 style="color:#FFFFFF";> Cubs</h1>
+	<p style="color:#FFFFFF";> Develop new skills. Soar to great heights. Being a Cub opens up a whole other world.</p>
 </div>
 
 </body>
