modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -48,7 +48,7 @@
   box-sizing: border-box;
 }
 .container {
-  position: relative;
+  position: left;
   max-width: relative;
   margin: 0 auto;
 }
