modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -42,27 +42,26 @@
 				<header>
 
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
   box-sizing: border-box;
 }
-.container {
+.containers {
   position: left;
   max-width: relative;
   margin: 0 auto;
 }
 
-.container img {align: left;}
+.containers img {align: left;}
 
-.container .content {
+.containers .content {
   position: absolute;
   bottom: 0;
   background: rgb(0, 0, 0); /* Fallback color */
   background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
   color: #f1f1f1;
   width: 100%;
-  padding: 20px;
+  padding: 0px;
 }
 </style>
 </head>
