modified:   cubs.html

--- a/cubs.html
+++ b/cubs.html
@@ -47,9 +47,10 @@
   box-sizing: border-box;
 }
 .containers {
-  position: left;
-  max-width: relative;
-  margin: 0 auto;
+	
+	margin: 1 auto;
+	max-width: calc(100% - 5em);
+	width: 60em;
 }
 
 .containers img {align: left;}
@@ -67,7 +68,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="containers">
 	<img src="images/group-of-cubs-on-raft.jpg" alt="Cubs on raft" style="width:auto;height:1000px" />
   <div class="content">
     <h1 style="color:#FFFFFF";> Cubs</h1>
